2009-03-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix: stack override-redirect windows where they belong.
	Otherwise these clients are left where they happen to be by
	mb_wm_stack_ensure().

	* matchbox/core/mb-wm-client-base.h
	* matchbox/core/mb-wm-client-base.c:
	  Export mb_wm_client_base_stack().
	* matchbox/client-types/mb-wm-client-override.c:
	  Use it for MBWMClientOverride.

2009-03-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103836 (or at least its test case).
	
	* matchbox/core/mb-wm-client.c: When a window is unmapped,
	don't also unmap its transients.  Instead, make them
	intransient and issue a warning.

2009-03-13  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Add new _HILDON_WM_NAME property which can be used to name
	a window and include markup (if you want to have italics
	or whatever in your window names).

	Fixes: NB#105404.

	* matchbox/core/mb-window-manager.c:
	* matchbox/core/mb-wm-atoms.c:
	* matchbox/core/mb-wm-client-window.c:
	* matchbox/core/mb-wm-types.h:

2009-03-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Hide some symbols.

	* matchbox/core/mb-window-manager.[ch]: Mark the following functions
	static: mb_wm_unmanage_client, mb_wm_manage_client, mb_wm_set_layout,
	mb_wm_set_n_desktops, mb_wm_set_cursor, mb_wm_set_theme.

	Mark the following functions internal to the library (i.e. protected):
	mb_wm_handle_ping_reply, mb_wm_handle_hang_client,
	mb_wm_compositing_on, mb_wm_compositing_off,
	mb_wm_compositing_enabled, mb_wm_select_desktop.

2009-03-12  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Root window handler gets to examine all the ClientMessages
	sent (in accordance with the TODO) rather than special-casing.

	Fixes: NB#105405
	
	* matchbox/core/mb-wm-main-context.c:
	* matchbox/core/mb-wm-root-window.c:

2009-03-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.21

2009-03-11  Thomas Thurman  <thomas.thurman@collabora.co.uk>
