@@ -36,6 +36,9 @@ static void
 mb_wm_client_base_realize (MBWindowManagerClient *client);
 
 static void
+mb_wm_client_base_stack (MBWindowManagerClient *client,
+			 int                    flags);
+static void
 mb_wm_client_base_show (MBWindowManagerClient *client);
 
 static void
@@ -296,7 +299,7 @@ mb_wm_client_move_to_top_recursive (
 	}
 }
 
-void
+static void
 mb_wm_client_base_stack (MBWindowManagerClient *client,
 			 int                    flags)
 {
